--- a/css/style.css
+++ b/css/style.css
@@ -1,8 +1,22 @@
-.features-text span {
-	color: red;
+body {
+	font-family: "Roboto Regular";
+ 	font-weight: normal;
+	font-size: 16px;
+	line-height: 22px;
+	color: #283136;
+}
+h1 {
+	font-family: "Roboto Medium";
+	font-weight: normal;
+	font-size: 45px;
+	line-height: 45px;
+	color: #000000;
 }
 
-.map {
-	height: 300px;
-	width: 980px;
+h2 {
+	font-family: "Roboto Bold";
+	font-weight: bold;
+	font-size: 24px;
+	line-height: 30px;
+	color: #000000;
 }
