--- a/css/style.css
+++ b/css/style.css
@@ -1,16 +1,157 @@
 body {
+	padding: 0;
 	font-family: "Roboto Regular";
  	font-weight: normal;
 	font-size: 16px;
 	line-height: 22px;
 	color: #283136;
+	width: 1440px;
+	margin: 0 auto;
 }
+
+.main-header {
+	min-height: 113px;
+
+}
+.clearfix {
+	content: "";
+	display: table;
+	clear: both;
+}
+
+
+.container {
+	width: 1160px;
+	margin: 0 auto;
+	padding: 0 20px;
+}
+
+
+/* HEADER */
+.logo {
+	width: 180px;
+	float: left;
+}
+
+.nav-bar {
+	width: 780px;
+	float: left;
+	margin: 0 20px;
+}
+
+.cart {
+	width: 160px;
+	float: right;
+}
+
+.nav-bar li {
+	display: inline-block;
+}
+
+/* end-header */
+
+/* MAIN */
+
+/* SLIDER */
+.slider {
+	margin-bottom: 80px;
+}
+.slider-item {
+	min-height: 436px;
+}
+
+.slider-caption {
+	width: 380px;
+	float: left;
+}
+
+.slider-img {
+	float: right;
+
+}
+/* end slider */
+
+
+/* FEATURES */
+.features-item {
+	display: inline-block;
+	width: 360px;
+	min-height: 353px;
+	float: left;
+	margin-right: 40px;
+	margin-bottom: 122px;
+	vertical-align: top;
+
+}
+
+.features-img {
+	margin: 0;
+}
+.features-item:last-child {
+	margin-right: 0;
+}
+/* end features */
+
+
+/* ABOUT */
+.about {
+	min-height: 486px;
+	margin-bottom: 54px;
+}
+
+.about-left {
+	display: inline-block;
+	float: left;
+	width: 700px;
+	margin-right: 80px;
+ }
+
+.about-right {
+	display: inline-block;
+	width: 380px;
+}
+/* end about */
+
+
+/* RECENT-WORKS */
+.recent-works {
+	min-height: 127px;
+}
+/* end recent-works */
+
+
+/* MAP */
+.contacts {
+	width: 318px;
+}
+
+.map .container {
+	min-height: 416px;
+}
+/* end map */
+
+/* FOOTER */
+.modal-window {
+	width: 960px;
+	margin: 0 auto;
+	min-height: 591px;
+}
+
+.social {
+	min-height: 216px;
+}
+
+/* end footer */
+
 h1 {
 	font-family: "Roboto Medium";
 	font-weight: normal;
 	font-size: 45px;
 	line-height: 45px;
 	color: #000000;
+	width: 760px;
+	margin: auto;
+	text-align: center;
 }
 
 h2 {
@@ -19,4 +160,62 @@ h2 {
 	font-size: 24px;
 	line-height: 30px;
 	color: #000000;
+
+}
+
+
+
+/* Catalog */
+
+.catalog-item {
+	min-height: 155px;
+	padding-top: 84px;
+	margin-bottom: 62px;
+}
+
+.left-section {
+	float: left;
+	margin-right: 20px;
+	min-height: 773px;
+	width: 280px;
+}
+
+.right-section {
+	display: inline-block;
+	width: 860px;
+	margin-bottom: 60px;
+}
+
+.gallery-item {
+	display: inline-block;
+	margin-right: 20px;
+	margin-left: 20px;
+}
+
+.paginator {
+	width: 680px;
+	margin-left: 280px;
+	margin-bottom: 60px;
+}
+
+.paginator ul {
+	margin: 0;
+}
+
+h3 {
+	margin: 0;
+}
+
+/* Стили для подсветки блоков*/
+header, footer {
+	background-color: rgba(36, 104, 181, .2);
+}
+
+.container {
+	background-color: rgba(184, 158, 131, .2)
+}
+
+main, .features-item, .about, .recent-works, .logo, .nav-bar, .cart, .slider-caption, .slider-item, .map, .contacts, .modal-window, .social,
+.catalog-item, .left-section, .right-section, .paginator {
+	background-color: rgba(190, 166, 131, .2)
 }
