Правки по стилям
С скролл пока все еще есть, остальные правки внесла

--- a/css/style.css
+++ b/css/style.css
@@ -1,8 +1,4 @@
 body {
-	margin: 0;
-	padding: 0;
-	width: 1440px;
-	margin: 0 auto;
 	font-family: "Roboto", Arial, sans-serif;
 	font-size: 16px;
 	line-height: 24px;
@@ -12,16 +8,30 @@ body {
 }
 
 .main-header {
+	width: 1440px;
+	margin: 0 auto;
 	min-height: 67px;
 	padding-top: 49px;
-	padding-bottom: 67px;
 	font-family: "Roboto", Arial, sans-serif;
 	font-weight: 500;
 	line-height: 30px;
 	text-transform: uppercase;
 	background-color: #eeeeee;
-
 }
+
+.main-header.inner {
+	padding-bottom: 67px;
+}
+
+/* main {
+	width: 1440px;
+	margin: 0 auto;
+} */
+.content {
+	width: 1440px;
+	margin: 0 auto;
+}
+
 .clearfix {
 	content: "";
 	display: table;
@@ -86,7 +96,6 @@ fieldset {
 HEADER STYLES
 ========================================================================================================================= */
 
-
 /* LOGO */
 
 .logo {
@@ -115,9 +124,8 @@ HEADER STYLES
 
 .nav-bar {
 	float: left;
-	width: 600px;
-	margin: 0 20px;
-	padding-left: 160px;
+	width: 800px;
+	padding-left: 180px;
 
 }
 
@@ -128,7 +136,7 @@ HEADER STYLES
 	font-size: 0;
 }
 
-.nav-bar li {
+.nav-bar li:not(:last-child) {
 	display: inline-block;
 	vertical-align: top;
 	margin-right: 48px;
@@ -152,7 +160,7 @@ HEADER STYLES
 	opacity: 0.3;
 }
 
-.nav-bar .active {
+.nav-item.active {
 	border-bottom: 2px solid #fb565a;
 }
 
@@ -164,10 +172,10 @@ HEADER STYLES
 
 .cart {
 	float: right;
-	width: 160px;
+	width: 75px;
 	margin-top: 26px;
 	position: relative;
-	text-align: right;
+	padding-left: 40px;
 }
 
 .cart a {
@@ -183,7 +191,7 @@ HEADER STYLES
     width: 15px;
     height: 15px;
 	top: 24%;
-	left: 29%;
+	left: 1px;
 	background-image: url("../img/spritesheet.png");
 	background-repeat: no-repeat;
     background-position: -5px -5px;
@@ -214,6 +222,8 @@ HEADER STYLES
 /* Временно к карте добавила картинку */
 
 .map {
+	width: 1440px;
+	margin: 0 auto;
 	padding-top: 52px;
 	background-image: url("../img/map-marker2.png");
 	background-color: #e9e5dc;
@@ -277,6 +287,8 @@ FOOTER STYLES
 
 
 .main-footer {
+	width: 1440px;
+	margin: 0 auto;
 	padding-top: 68px;
 }
 
@@ -618,67 +630,124 @@ MODAL-WINDOW
 SLIDER
 ======================================================================================================================*/
 
+
 .slider {
+	width: 1440px;
+	background-color: #eeeeee;
+	margin: 0 auto;
 	margin-bottom: 80px;
+}
+
+.slider-wrapper {
+	position: relative;
+	width: 1160px;
+	height: 421px;
+	margin: 0 auto;
+}
+
+.slider-controls {
+	position: absolute;
+	bottom: 98px;
+	left: 50%;
+	width: 200px;
+	height: 16px;
+	margin-left: -100px;
+	text-align: center;
+	z-index: 1000;
+}
+
+.slider-controls i {
+	position: relative;
+	display: inline-block;
+	width: 5px;
+	height: 5px;
+	margin: -1px 6px;
+	background: white;
+	border: 7px solid white;
+	vertical-align: top;
+	border-radius: 50%;
+	cursor: pointer;
+}
+
+.slider-controls .active::before {
+	content: "";
+	position: absolute;
+	top: 50%;
+	right: 50%;
+	margin: -4.5px;
+	display: block;
+	width:5px;
+	height: 5px;
+	background: white;
+	border: 2px solid #c1c1c1;
+	border-radius: 50%;
+}
+
+.slide {
+	position: absolute;
+	top: 0;
+	left: 0;
+	width: 100%;
+	height: 100%;
+	overflow: hidden;
 	background-color: #eeeeee;
 }
 
-.slider-item {
-	position: relative;
-	min-height: 354px;
-}
-
-.slider-caption {
-	position: relative;
+.slide-text {
 	width: 560px;
-	z-index: 11;
+	padding: 67px 0;
+	color: #283136;
 }
 
-.slider-header {
-	font-weight: 500;
-	font-size: 55px;
+.slide-text p {
+	margin: 0;
+	margin-top: 26px;
+	margin-bottom: 40px;
+	letter-spacing: 0.2px;
+}
+
+.slide-title {
+	display: block;
+	width: 532px;
+	font-size: 57px;
 	line-height: 55px;
+	font-weight: 500;
+	color: black;
 }
 
-.slider-caption p {
-	margin: 0px;
-	margin-top: 28px;
+.slide .btn {
+	display: inline-block;
+	padding: 16px 57px;
+	font-size: 15px;
+	text-align: center;
+	text-decoration: none;
+	background: #fb565a;
+
 }
 
-.slider-img {
-	position: absolute;
-	left: 400px;
-	top: -67px;
-	width: 760px;
-	height: 421px;
-	z-index: 10;
+.slide:nth-child(1) {
+	background-image: url("../img/slider-1.jpg");
+	background-repeat: no-repeat;
+	background-position: 100% -11px;
 }
 
-
-/*SLIDER-BTN*/
-
-
-.slider-item .btn {
-	margin-top: 38px;
-	padding: 16px 55px;
-	color: #ffffff;
+.slide:nth-child(2) {
+	background-image: url("../img/slider-2.jpg");
+	background-repeat: no-repeat;
+	background-position: 100% -1px;
 }
 
-.slider-item .btn:hover {
-	background-color: #e74246;
+.slide:nth-child(3) {
+	background-image: url("../img/slider-3.jpg");
+	background-repeat: no-repeat;
+	background-position: 100% -1px;
 }
 
-.slider-item .btn:active {
-	background-color: #d7373b;
-	color: rgba(255, 255, 255, 0.3);
-	box-shadow: inset 0 3px rgba(193, 49, 53, 0.1);
-}
-
-/* end btn */
-
-.slider-item:nth-child(3),
-.slider-item:nth-child(2) {
+.slide {
 	display: none;
+}
+.slide:nth-child(1) {
+	display: block;
 }
 /* end slider */
 
@@ -804,20 +873,24 @@ SLIDER
 	display: inline-block;
 	vertical-align: top;
 	width: 700px;
-	margin-right: 100px;
+	margin-right: 99px;
 }
 
-.about-left p {
-	width: 670px;
-}
 
 .lead {
+	width: 686px;
 	margin-top: 33px;
 	margin-bottom: 34px;
 	font-size: 45px;
 	line-height: 45px;
-	font-weight: 500;
-	letter-spacing: 0.2px;
+	font-weight: 700;
+}
+
+.about-left .text {
+	width: 622px;
+	font-size: 17px;
+	letter-spacing: -0.3px;
+
 }
 
 .about-left h4 {
@@ -825,7 +898,7 @@ SLIDER
 	margin-bottom: 22px;
 	font-size: 16px;
 	line-height: 24px;
-	font-weight: 700;
+	font-weight: 500;
 	text-transform: uppercase;
 }
 
@@ -860,7 +933,7 @@ SLIDER
 .about-right {
 	display: inline-block;
 	vertical-align: top;
-	width: 359px;
+	width: 361px;
 }
 
 .about-right img {
@@ -871,6 +944,7 @@ SLIDER
 .about-right h4 {
 	margin-top: 27px;
 	margin-left: 17px;
+	margin-bottom: 49px;
 	font-size: 16px;
 	line-height: 24px;
 	font-weight: 700;
@@ -886,7 +960,6 @@ SLIDER
 	display: inline-block;
 	vertical-align: top;
 	width: 117px;
-	margin-top: 28px;
 	list-style: none;
 }
 
@@ -941,7 +1014,7 @@ SLIDER
 	height: 84px;
 }
 .recent-works a {
-	position: relative;
+
 	display: inline-block;
 	vertical-align: middle;
 	width: 260px;
@@ -961,8 +1034,17 @@ SLIDER
 .recent-works a:active {
 	opacity: 0.1;
 }
+.vertical-line {
+	position: relative;
+	display: inline-block;
+	width: 260px;
 
-.recent-logo:not(:first-child)::after {
+/* 	outline: 1px solid black;
+ */}
+.vertical-line:not(:last-child) {
+	margin-right: 36px;
+}
+.vertical-line:not(:first-child)::after {
 	content: "";
 	position: absolute;
 	top: 10px;
@@ -971,10 +1053,9 @@ SLIDER
 	width: 0px;
 	height: 52px;
 	border: 1px solid #eeeeee;
-	opacity: 1;
 }
 
-.recent-logo:nth-child(3)::after {
+.vertical-line:nth-child(3)::after {
 	top: -4px;
 }
 
@@ -1245,6 +1326,7 @@ input[type="checkbox"]:disabled + label {
 	font-weight: 500;
 	text-transform: uppercase;
 	background-color: #eeeeee;
+	outline: none;
 }
 
 .left-section .button:hover {
@@ -1334,8 +1416,8 @@ input[type="checkbox"]:disabled + label {
 .sort-arrows {
 	display: inline-block;
 	vertical-align: top;
-	margin-top: -1px;
-	margin-left: 25px;
+	margin-top: 2px;
+	margin-left: 27px;
 }
 
 .sort-arrows a {
@@ -1343,7 +1425,12 @@ input[type="checkbox"]:disabled + label {
 	vertical-align: top;
 	width: 0;
 	height: 0;
-	border: 6px solid #000000;
+	border-color: black;
+	border-style: solid;
+	border-top-width: 11px;
+	border-right-width: 5px;
+	border-bottom-width:5px;
+	border-left-width: 5px;  
 	border-right-color: transparent;
 	border-left-color: transparent;
 	border-bottom-color: transparent;
@@ -1354,11 +1441,8 @@ input[type="checkbox"]:disabled + label {
 
 .sort-arrows a:last-child {
 	transform: rotate(180deg);
-}
-
-.sort-arrows a:first-child {
-    margin-top: 5px;
-    margin-right: 15px;
+	margin-left: 18px;
+	margin-top: -5px;
 }
 
 .sort-arrows a:hover {
@@ -1391,7 +1475,7 @@ input[type="checkbox"]:disabled + label {
 .gallery-item {
 	position: relative;
 	margin-bottom: 26px;
-	border-top: 40px solid rgba(0, 0, 0, 0.12);
+	border-top: 40px solid #e9e9e9;
 	border-top-left-radius: 4px;
 	border-top-right-radius: 4px;
 }
@@ -1407,6 +1491,18 @@ input[type="checkbox"]:disabled + label {
 	border-radius: 50%;
 }
 
+.gallery-item-wrapper::after {
+	content: "";
+	position: absolute;
+	display: block;
+	height: 14px;
+	width: 14px;
+	top: -27px;
+	left: 63px;
+	background-color: #ffffff;
+	border-radius: 50%;
+}
+
 .gallery-item::before{
 	top: -27px;
 	left: 40px;
@@ -1418,12 +1514,16 @@ input[type="checkbox"]:disabled + label {
 }
 
 .gallery-item:hover::after,
-.gallery-item:hover::before {
+.gallery-item:hover::before,
+.gallery-item-wrapper:hover::after,
+.gallery-item:hover .gallery-item-wrapper::after {
 	display: none;
 }
 
 .gallery-item:active::after,
-.gallery-item:active::before {
+.gallery-item:active::before,
+.gallery-item-wrapper:active::after,
+.gallery-item:active .gallery-item-wrapper::after {
 	display: block;
 }
 
@@ -1652,5 +1752,4 @@ header, footer {
     width: 26px;
     height: 15px;
     background-position: -5px -305px;
-<<<<<<< HEAD
 } */
