--- a/css/style.css
+++ b/css/style.css
@@ -7,11 +7,15 @@ body {
 	background-color: white;
 }
 
+img {
+	max-width: 100%;
+	height: auto;
+}
+
 .main-header {
 	margin: 0 auto;
 	min-height: 67px;
 	padding-top: 49px;
-	font-family: "Roboto", Arial, sans-serif;
 	font-weight: 500;
 	line-height: 30px;
 	text-transform: uppercase;
@@ -65,7 +69,6 @@ body {
 
 h1 {
 	margin: 0;
-	font-family: "Roboto", Arial, sans-serif;
 	font-weight: 500;
 	font-size: 55px;
 	line-height: 55px;
@@ -73,7 +76,6 @@ h1 {
 }
 
 h2 {
-	font-family: "Roboto", Arial, sans-serif;
 	font-weight: 700;
 	font-size: 24px;
 	line-height: 30px;
@@ -87,6 +89,14 @@ h3 {
 	font-weight: 700;
 	text-transform: uppercase;
 
+}
+
+h4 {
+	color: #000000;
+	font-size: 16px;
+	line-height: 24px;
+	font-weight: 700;
+	text-transform: uppercase;
 }
 
 fieldset {
@@ -121,11 +131,9 @@ HEADER STYLES
 	opacity: 0.8;
 }
 
-/* end logo */
 
 
 /* NAV-BAR*/
-
 
 .nav-bar {
 	float: left;
@@ -169,8 +177,6 @@ HEADER STYLES
 	border-bottom: 2px solid #fb565a;
 }
 
-/* end nav-bar */
-
 
 
 /* CART */
@@ -181,12 +187,6 @@ HEADER STYLES
 	margin-top: 26px;
 	position: relative;
 	padding-left: 40px;
-}
-
-.cart a {
-	font-size: 16px;
-	text-decoration: none;
-	color: #000000;
 }
 
 
@@ -203,16 +203,6 @@ HEADER STYLES
     opacity: 0.3;
 }
 
-.cart a:hover {
-	color: #fb565a;
-}
-
-.cart a:active {
-	color: #000000;
-	opacity: 0.3;
-}
-
-/* end cart */
 
 /* end-header */
 
@@ -224,19 +214,15 @@ HEADER STYLES
  MAP STYLES
  ======================================================================================================================*/
 
-/* Временно к карте добавила картинку */
-
 .map {
 	width: 1200px;
 	margin: 0 auto;
 	padding-top: 52px;
 	background-image: url("../img/map-marker2.png");
 	background-color: #e9e5dc;
-}
-
-.map .container {
 	min-height: 362px;
 }
+
 
 /*CONTACTS*/
 
@@ -250,6 +236,7 @@ HEADER STYLES
 
 .contacts h3 {
 	margin-bottom: 22px;
+	color: #000000;
 }
 
 .contacts p {
@@ -266,12 +253,9 @@ HEADER STYLES
 }
 
 
-/* CONTACTS-BTN */
 .contacts .btn {
 	padding: 16px 45px;
 }
-
-/* end contacts */
 
 /* end map*/
 
@@ -282,9 +266,8 @@ FOOTER STYLES
 
 
 .main-footer {
-	width: 1200px;
 	margin: 0 auto;
-	padding-top: 68px;
+	padding-top: 70px;
 }
 
 .social {
@@ -315,7 +298,7 @@ FOOTER STYLES
 
 .social-icons a:active {
 	background-color: #d7373b;
-	box-shadow: inset 0 3px rgba(193, 49, 53, 0.1);
+	box-shadow: inset 0 3px rgba(193, 49, 53, 1);
 }
 
 .social-icons a:nth-child(2) {
@@ -377,10 +360,13 @@ FOOTER STYLES
 	font-size: 36px;
 	line-height: 36px;
 	font-weight: 700;
+	color: #000000;
 }
 
 .social-text p {
 	margin-top: 8px;
+	line-height: 22px;
+	color: #444444;
 }
 
 /* end footer */
@@ -394,7 +380,7 @@ MODAL-WINDOW
 .modal-window {
 	display: none;
 	position: absolute;
-	top: 1670px;
+	top: 168%;
 	left: 50%;
 	width: 760px;
 	margin-left: -380px;
@@ -405,7 +391,7 @@ MODAL-WINDOW
 }
 
 .modal-window.inner {
-	top: 2300px;
+	top: 2400px;
 }
 
 .close {
@@ -456,7 +442,7 @@ MODAL-WINDOW
 
 .modal-window legend {
 	margin: 0;
-	margin-bottom: 39px;
+	margin-bottom: 41px;
 	padding: 0;
 	font-size: 45px;
 	line-height: 45px;
@@ -477,12 +463,13 @@ MODAL-WINDOW
 	vertical-align: top;
 	width: 360px;
 	margin: 0;
-	margin-bottom: 35px;
 	padding: 0;
+	margin-bottom:11px;
 	padding-right: 36px;
 	font-weight: 700;
 	line-height: 18px;
 }
+
 
 .write-us label:nth-child(3) {
 	padding-right: 0;
@@ -499,11 +486,16 @@ MODAL-WINDOW
 	width: 343px;
 	min-height: 44px;
 	margin: 0;
+	margin-bottom: 35px;
 	padding: 0;
 	padding-left: 13px;
 	border: 2px solid #d7dcde;
 	border-radius: 5px;
 	font-weight: 500;
+}
+
+.modal-window input[type="email"] {
+	margin-left: 37px;
 }
 
 
@@ -549,10 +541,10 @@ MODAL-WINDOW
 
 .modal-window .textarea {
 	display: block;
-	margin-bottom: 45px;
 }
 
 .modal-window textarea {
+	margin-bottom: 41px;
 	padding: 11px 14px;
 	border: 2px solid #d7dcde;
 	border-radius: 5px;
@@ -627,10 +619,14 @@ SLIDER
 .slider-wrapper {
 	position: relative;
 	width: 1160px;
-	height: 421px;
+	min-height: 421px;
 	margin: 0 auto;
 }
 
+.slider input[type=radio] {
+	position: absolute;
+	opacity: 0;
+}
 .slider-controls {
 	position: absolute;
 	bottom: 98px;
@@ -642,8 +638,7 @@ SLIDER
 	z-index: 1000;
 }
 
-.slider-controls i {
-	position: relative;
+.slider-controls label {
 	display: inline-block;
 	width: 5px;
 	height: 5px;
@@ -655,18 +650,10 @@ SLIDER
 	cursor: pointer;
 }
 
-.slider-controls .active::before {
-	content: "";
-	position: absolute;
-	top: 50%;
-	right: 50%;
-	margin: -4.5px;
-	display: block;
-	width:5px;
-	height: 5px;
-	background: white;
-	border: 2px solid #c1c1c1;
-	border-radius: 50%;
+#btn-1:checked ~ .slider-controls label[for="btn-1"],
+#btn-2:checked ~ .slider-controls label[for="btn-2"],
+#btn-3:checked ~ .slider-controls label[for="btn-3"] {
+	background: #c1c1c1;
 }
 
 .slide {
@@ -682,23 +669,22 @@ SLIDER
 .slide-text {
 	width: 560px;
 	padding: 67px 0;
-	color: #283136;
 }
 
 .slide-text p {
 	margin: 0;
 	margin-top: 26px;
 	margin-bottom: 40px;
-	letter-spacing: 0.2px;
 }
 
 .slide-title {
 	display: block;
 	width: 532px;
-	font-size: 57px;
+	font-size: 55px;
 	line-height: 55px;
 	font-weight: 500;
-	color: black;
+	color: #000000;
+	letter-spacing: -0.9px;
 }
 
 .slide .btn {
@@ -726,7 +712,15 @@ SLIDER
 .slide {
 	display: none;
 }
-.slide:nth-child(1) {
+#btn-1:checked ~ .slides .slide:nth-child(1) {
+	display: block;
+}
+
+#btn-2:checked ~ .slides .slide:nth-child(2) {
+	display: block;
+}
+
+#btn-3:checked ~ .slides .slide:nth-child(3) {
 	display: block;
 }
 /* end slider */
@@ -774,13 +768,12 @@ SLIDER
 .features h2 {
 	text-transform: uppercase;
 	margin-top: 25px;
-	margin-bottom: 18px;
+	margin-bottom: 16px;
 }
 
 .features-text p {
 	width: 260px;
-	margin-bottom: 31px;
-	color: #283136;
+	margin-bottom: 32px;
 }
 
 .features-img {
@@ -792,7 +785,7 @@ SLIDER
 /* FEATURES-BTNS */
 
 .features-item .btn {
-	padding: 16px 41px;
+	padding: 16px 40px;
 }
 
 
@@ -850,36 +843,39 @@ SLIDER
 
 .lead {
 	width: 686px;
-	margin-top: 33px;
+	margin-top: 34px;
 	margin-bottom: 34px;
+}
+
+.lead b {
 	font-size: 45px;
 	line-height: 45px;
-	font-weight: 700;
+	font-weight: 500;
+	letter-spacing: 0.4px;
+	color: #000000;
 }
+
 
 .about-left .text {
 	width: 622px;
-	font-size: 17px;
-	letter-spacing: -0.3px;
-
 }
 
 .about-left h4 {
 	margin-top: 38px;
-	margin-bottom: 22px;
-	font-size: 16px;
-	line-height: 24px;
-	font-weight: 500;
-	text-transform: uppercase;
+	margin-bottom: 24px;
+	
+
 }
 
 .service {
 	margin: 0;
+	padding: 0;
+	padding-left: 36px;
 }
 .service li {
 	position: relative;
 	display: block;
-	margin-bottom: 27px;
+	margin-bottom: 24px;
 	list-style: none;
 }
 
@@ -887,8 +883,8 @@ SLIDER
 .service li::before {
 	content: "";
 	position: absolute;
-	top: 49%;
-	left: -6%;
+	top: 12px;
+	left: -5%;
     width: 25px;
     height: 2px;
 	background-image: url("../img/spritesheet.png");
@@ -909,17 +905,13 @@ SLIDER
 
 .about-right img {
 	width: 360px;
-	height: 210px;
+	height: 208px;
 }
 
 .about-right h4 {
 	margin-top: 27px;
 	margin-left: 17px;
 	margin-bottom: 49px;
-	font-size: 16px;
-	line-height: 24px;
-	font-weight: 700;
-	text-transform: uppercase;
 }
 
 .guaranty {
@@ -945,6 +937,7 @@ SLIDER
 	font-weight: 700;
 	font-size: 45px;
 	line-height: 10.06px;
+	color: #000000;
 }
 
 .percent b {
@@ -1069,6 +1062,7 @@ SLIDER
 	line-height: 30px;
 	font-weight: 700;
 	text-transform: uppercase;
+	color: #000000;
 
 }
 
@@ -1080,97 +1074,94 @@ SLIDER
 .left-section label {
 	font-size: 16px;
 	line-height: 20px;
-	color: #283136;
 }
 
 /* range-filter */
 
 .range-filter {
-	position: relative;
-	min-height: 187px;
-}
-
-.scale {
 	width: 260px;
-	height: 80px;
 	margin-top: 48px;
-	background-color: #eeeeee;
-	border-radius: 4px;
-	margin-bottom: 13px;
+	margin-bottom: 108px;
 }
 
-.bar::before {
-	content: "";
-	position: absolute;
-	top: 39px;
-	left: 27px;
-	display: inline-block;
-	width: 143px;
+.range-controls {
+	position: relative;
+	height: 80px;
+	margin-bottom: 15px;
+	padding: 0 21px;
+	background: #f1f1f1;
+	border-radius: 5px;
+	overflow: hidden;
+}
+
+.range-controls .scale {
+	margin-top: 39px;
 	height: 2px;
-	background-color: #00ca74;
+	background: #d7dcde;
 }
 
-.bar::after {
-	content: "";
-	position: absolute;
-	top: 39px;
-	right: 42px;
-	display: inline-block;
-	width: 69px;
+.range-controls .bar {
 	height: 2px;
-	background-color: #d7dcde;
+	background: #00ca74;
 }
 
-.toggle-min::before {
-	content: "";
+.range-controls .toggle {
 	position: absolute;
-	top:29px;
+	top: 30px;
+	left: 30px;
+	width: 4px;
+	height: 4px;
+	border: 8px solid white;
+	background: #ababab;
+	border-radius: 50%;
+	box-shadow: 0 2px 1px 0 #cfcfcf;
+	cursor: pointer;
+}
+
+.range-controls .toggle-min {
 	left: 18px;
-    display: block;
-	width: 20px;
-    height: 23px;
-	background-image: url("../img/spritesheet.png");
-    background-repeat: no-repeat;
-    background-position: -5px -272px;
 }
 
-
-.toggle-min::after {
-	content: "";
-	position: absolute;
-	top:29px;
+.range-controls .toggle-max {
 	left: 160px;
-    display: block;
-	width: 20px;
-    height: 23px;
-	background-image: url("../img/spritesheet.png");
-    background-repeat: no-repeat;
-    background-position: -5px -272px;
 }
 
-.price {
-	display: inline-block;
-	width: 120px; 
-	vertical-align: middle;
-	margin-right: 22px;
+
+.price-controls input {
+	width: 60px;
+	padding: 10px 10px;
+	margin-left: 10px;
+	border: none;
+	background: #f1f1f1;
+	font-size: 16px;
+	font-family: "Roboto", Arial, sans-serif;
+	font-weight: 400;
+	font-style: normal;
+	text-align: center;
+	color: #283136;
+	border-radius: 5px;
+	letter-spacing: 1px;
+}
+
+.price-controls {
+	position: relative;
 	font-size: 16px;
 	line-height: 22px;
 	font-weight: 400;
-
+	color: #283136;
+	text-transform: uppercase;
 }
 
-.price:last-child {
-	margin-right: 0;
+.price {
+	position: absolute;	
 }
 
-.price input {
-	width: 80px;
-	height: 37px;
-	margin-left: 12px;
-	background-color: #eeeeee;
-	border-style: none;
-	border-radius: 4px;
-	text-align: center;
+.min-price {
+	left: -1px;
+}
+
+.max-price {
+	right: -2px;
 }
 
 /* end range-filter */
@@ -1381,7 +1372,7 @@ input[type="checkbox"]:disabled + label {
 	color: rgba(0, 0, 0, 0.6);	
 }
 
-.sorting a:focus {
+.sorting a:active {
 	color: rgba(0, 0, 0, 1.0);	
 }
 
@@ -1514,6 +1505,7 @@ input[type="checkbox"]:disabled + label {
 	width: 200px;
 	margin: 0 auto;
 	text-align: center;
+	color: #666666;
 }
 
 .hover .btn {
