--- a/css/style.css
+++ b/css/style.css
@@ -1505,6 +1505,10 @@ input[type="checkbox"]:disabled + label {
 	margin-bottom: 16px;
 	text-align: center;
 }
+.gallery-item-wrapper img {
+	width: 359px;
+	height: 575px;
+}
 
 .hover .item-name {
 	text-decoration: none;
@@ -1512,15 +1516,43 @@ input[type="checkbox"]:disabled + label {
 }
 
 .hover p {
-	width: 200px;
+	width: 240px;
 	margin: 0 auto;
 	text-align: center;
 	color: #666666;
+	overflow: hidden;
+	position: relative;
+	line-height: 1.2em;
+	max-height: 3.6em;
+	margin-right: 3em;
+	padding-right: 1em;
 }
+
+
+/*правило на случай переполнения*/
+.hover p:before {
+	content: '...';
+	position: absolute;
+	right: 0;
+  	bottom: 0;
+}
+
+.hover p:after {
+	content: '';
+	position: absolute;
+	right: 0;
+	width: 1em;
+	height: 1em;
+	margin-top: 0.2em;
+	background: #eeeeee;
+}
+/*================================*/
+
 
 .hover .btn {
 	margin-left: 78px;
 	margin-top: 30px;
+
 	padding: 16px 60px;
 }
 
